# chess

./: Cargo.toml  atlas.ron
res/: atlas.ron
src/: board.rs  main.rs  piece.rs
