[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srs2dge = { path = "../srs2dge" }
main_game_loop = "0.1"
static_res = "0.1"
winit = "0.26"
env_logger = "0.9.0"
log = "0.4.16"
image = "0.24.1"
ron = "0.7.0"
serde = "1.0.136"
rand = "0.8.5"
